[feat] settings for category controller test